classDiagram
  %% Traffic Monitor Module - Class Diagram
  %% Standard UML class diagram for Traffic Monitor and Big-screen module

  class TrafficMonitorController {
    -RedisService redisService
    +List<Map<String,Object>> getAllIntersections()
    +Map<Object,Object> getIntersectionRealtime(String id)
    +Map<Object,Object> getDashboardStats()
    +List<Map<String,Object>> getHeatmapData()
    +String setIntersectionData(String id, Map<String,Object> data)
    +String setDashboardStats(Map<String,Object> stats)
    +String setHeatmapData(List<Map<String,Object>> heatmap)
  }

  class RedisService {
    -RedisTemplate<String,Object> redisTemplate
    +void setTrafficStatus(String intersectionId, Map<String,Object> status)
    +Map<Object,Object> getTrafficStatus(String intersectionId)
    +Set<String> getAllIntersections()
    +void setDashboardStats(Map<String,Object> stats)
    +Map<Object,Object> getDashboardStats()
    +void setHeatmapData(List<Map<String,Object>> heatmap)
    +List<Map<String,Object>> getHeatmapData()
  }

  class StreamingServer {
    +String getStreamUrl(String cameraId)
    +boolean isStreamAvailable(String cameraId)
  }

  class Intersection {
    +String id
    +String name
    +String location
    +Map<String,Object> data
  }

  class DashboardMetrics {
    +String congestionIndex
    +String totalVehicleCount
    +String avgTravelTime
    +LocalDateTime updatedAt
  }

  class HeatmapPoint {
    +Double lat
    +Double lng
    +Integer weight
  }

  %% Relationships
  TrafficMonitorController --|> RedisService : uses
  TrafficMonitorController --|> StreamingServer : requests stream URL
  TrafficMonitorController ..> Intersection : returns
  TrafficMonitorController ..> DashboardMetrics : returns
  TrafficMonitorController ..> HeatmapPoint : returns
